--- a/src/styles.css
+++ b/src/styles.css
@@ -139,6 +139,7 @@ button:focus {
     left: 0;
     right: 0;
     bottom: 0;
+
 } 
 
 .modal {
@@ -152,6 +153,9 @@ button:focus {
     transform: translate(-50%, -50%);
     max-width: 100%;
     width: 400px;
+    animation-name: modalopen;
+    animation-duration: var(--modal-duration);
+
 }
 
 .modal-header {
@@ -189,4 +193,14 @@ button:focus {
     position: absolute;
     top: 0;
     right: 0;
+}
+
+@keyframes modalopen {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
